@@ -1,3 +1,15 @@
+2011-09-06  Filip Pizlo  <fpizlo@apple.com>
+
+        LayoutTests does not include a test for DFG speculation recovery of additions
+        https://bugs.webkit.org/show_bug.cgi?id=67667
+
+        Reviewed by Geoffrey Garen.
+
+        * fast/js/add-recovery-expected.txt: Added.
+        * fast/js/add-recovery.html: Added.
+        * fast/js/script-tests/add-recovery.js: Added.
+        (destructiveAddForBoxedInteger):
+
 2011-09-06  David Hyatt  <hyatt@apple.com>
 
         https://bugs.webkit.org/show_bug.cgi?id=67657
